# metadata

./: Cargo.toml  README.adoc  README.md
src/: _parquet.rs  egui.rs  error.rs  ipc.rs  lib.rs  parquet.rs  polars.rs
tests/: main.rs
