[package]
name = "metadata"
version = "0.7.0"
authors = ["Kazakov Giorgi Vladimirovich", "Sidorov Roman Alexandrovich"]
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
egui = { version = "0.32.3", optional = true }
egui-phosphor = { version = "0.10.0", optional = true }
egui_extras = { version = "0.32.3", features = [
    "datepicker",
    "serde",
], optional = true }
polars = { version = "0.51.0", default-features = false, features = [
    "ipc",
    "parquet",
    "serde",
] }
polars-parquet = "0.51.0"
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.225", features = ["derive", "std"] }
thiserror = "2.0.16"
tracing = "0.1.41"

[features]
default = ["egui", "ipc", "parquet"]

egui = ["dep:egui", "dep:egui-phosphor", "dep:egui_extras"]
ipc = []
parquet = ["polars/parquet"]
