[package]
name = "metadata"
version = "0.7.0"
authors = ["Kazakov Giorgi Vladimirovich", "Sidorov Roman Alexandrovich"]
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
egui = { version = "0.33.0", optional = true }
egui-phosphor = { version = "0.10.0", optional = true }
egui_extras = { version = "0.33.0", features = [
    "datepicker",
    "serde",
], optional = true }
polars = { git = "https://github.com/pola-rs/polars", rev = "5594b81b1177ad20ebecff8ad4c807b1816647ff", default-features = false, features = [
    "serde",
], optional = true }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive", "std"] }
thiserror = "2.0.17"
tracing = "0.1.41"

[features]
default = ["egui", "polars"]
egui = ["dep:egui", "dep:egui-phosphor", "dep:egui_extras"]
polars = ["dep:polars"]
